# Docpilot

./: README.md  pyproject.toml
src/: __init__.py  docpilot.py
src/docpilot/: cli.py  config.py  llm.py  scanner.py
src/docpilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_entrypoints.py  test_git_workflow.py  test_llm.py  test_readme.py  test_scanner.py
