[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docpilot"
version = "0.1.0"
description = "AI assistant for generating project documentation and committing it to Git"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click>=8.1,<9",
  "openai>=1.0.0",
]
license = {text = "MIT"}
keywords = ["docs", "git", "cli", "ai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
test = ["pytest>=8.0"]

[project.scripts]
docpilot = "docpilot.cli:main"

[tool.setuptools]
packages = ["docpilot"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
docpilot = ["py.typed"]
